--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-js-loader": "^0.1.0",
     "react-paginate": "^8.1.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
